@@ -16,6 +16,7 @@ package com.redhat.rhn.domain.action.test;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertInstanceOf;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
@@ -74,7 +75,6 @@ import java.time.temporal.ChronoUnit;
 import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 /**
@@ -150,7 +150,7 @@ public class ActionFactoryTest extends BaseTestCaseWithUser {
         Action a = ActionFactory.lookupById(id);
 
         assertNotNull(a);
-        assertTrue(a instanceof ScriptRunAction);
+        assertInstanceOf(ScriptRunAction.class, a);
         ScriptRunAction s = (ScriptRunAction) a;
         assertNotNull(s.getScriptActionDetails().getUsername());
         assertNotNull(s.getEarliestAction());
@@ -178,7 +178,7 @@ public class ActionFactoryTest extends BaseTestCaseWithUser {
     public void testLookupErrataAction() throws Exception {
         Action newA = createAction(user, ActionFactory.TYPE_ERRATA);
         assertNotNull(newA.getId());
-        assertTrue(newA instanceof ErrataAction);
+        assertInstanceOf(ErrataAction.class, newA);
         ErrataAction ea = (ErrataAction) newA;
         assertNotNull(ea.getErrata());
         assertNotNull(((Errata) ea.getErrata().toArray()[0]).getId());
@@ -194,7 +194,7 @@ public class ActionFactoryTest extends BaseTestCaseWithUser {
         Long id = newA.getId();
         Action a = ActionFactory.lookupById(id);
         assertNotNull(a);
-        assertTrue(a instanceof DaemonConfigAction);
+        assertInstanceOf(DaemonConfigAction.class, a);
         DaemonConfigAction dca = (DaemonConfigAction) a;
         assertNotNull(dca.getId());
         assertNotNull(dca.getDaemonConfigDetails());
@@ -415,7 +415,7 @@ public class ActionFactoryTest extends BaseTestCaseWithUser {
         TestUtils.saveAndReload(a1);
         TestUtils.saveAndReload(a2);
 
-        List<Long> actionIds = Stream.of(a1, a2).map(Action::getId).collect(Collectors.toList());
+        List<Long> actionIds = Stream.of(a1, a2).map(Action::getId).toList();
         ActionFactory.rejectScheduledActions(actionIds, "Test Rejection Reason");
 
         sa1 = HibernateFactory.reload(sa1);
