@@ -35,7 +35,6 @@ import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import javax.persistence.criteria.CriteriaBuilder;
@@ -243,13 +242,13 @@ public class ContentProjectFactory extends HibernateFactory {
         // Check for custom child channels that were not built by the environment to be removed
         List<Channel> channels = toRemove.getTargets().stream()
                 .map(EnvironmentTarget::asSoftwareTarget).flatMap(Optional::stream)
-                .map(SoftwareEnvironmentTarget::getChannel).collect(Collectors.toList());
+                .map(SoftwareEnvironmentTarget::getChannel).toList();
 
-        List<Channel> childChannels = channels.stream().filter(c -> !c.isBaseChannel()).collect(Collectors.toList());
+        List<Channel> childChannels = channels.stream().filter(c -> !c.isBaseChannel()).toList();
         channels.stream().filter(Channel::isBaseChannel).findAny().ifPresent(bc -> {
             List<String> rogueChannels = ChannelFactory.listAllChildrenForChannel(bc).stream()
                     .filter(b -> !childChannels.contains(b))
-                    .map(Channel::getName).collect(Collectors.toList());
+                    .map(Channel::getName).toList();
             if (!rogueChannels.isEmpty()) {
                 throw  new ContentManagementException(LocalizationService.getInstance().getMessage(
                         "contentmanagement.non_environment_channels_found", rogueChannels));
@@ -500,7 +499,7 @@ public class ContentProjectFactory extends HibernateFactory {
                 .setParameter("project", project)
                 .setParameter("channel", channel)
                 .stream();
-        return clones.flatMap(c -> c.asCloned().stream()).collect(Collectors.toList());
+        return clones.flatMap(c -> c.asCloned().stream()).toList();
     }
 
     /**
