@@ -23,7 +23,6 @@ import org.apache.logging.log4j.Logger;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 import javax.persistence.criteria.CriteriaBuilder;
 import javax.persistence.criteria.CriteriaQuery;
@@ -157,7 +156,7 @@ public class CredentialsFactory extends HibernateFactory {
             .createQuery(query)
             .stream()
             .map(Credentials.class::cast)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
