@@ -31,13 +31,11 @@ import org.apache.commons.lang3.StringUtils;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.struts.action.DynaActionForm;
-import org.stringtree.json.JSONWriter;
 
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 
@@ -105,8 +103,7 @@ public class ActionChainHelper {
             populateActionChain(result, placeholder);
         }
 
-        String json = new JSONWriter().write(result);
-        request.setAttribute(EXISTING_ACTION_CHAINS_PROPERTY_NAME, json);
+        request.setAttribute(EXISTING_ACTION_CHAINS_PROPERTY_NAME, Json.GSON.toJson(result));
     }
 
     /**
@@ -143,6 +140,6 @@ public class ActionChainHelper {
                     tuple.addProperty("id", ac.getId());
                     tuple.addProperty("text", ac.getLabel());
                     return tuple;
-                }).collect(Collectors.toList()));
+                }).toList());
     }
 }
