@@ -21,7 +21,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 
@@ -79,7 +78,7 @@ public class SaltMinionJson {
                 fromFingerprints(fp.getDeniedMinions(), sids, STATE_DENIED, isVisible),
                 fromFingerprints(fp.getRejectedMinions(), sids, STATE_REJECTED, isVisible),
                 fromFingerprints(fp.getUnacceptedMinions(), sids, STATE_PENDING, isVisible)
-        ).flatMap(Function.identity()).collect(Collectors.toList());
+        ).flatMap(Function.identity()).toList();
     }
 
     /**
