@@ -14,7 +14,6 @@
  */
 package com.suse.scc.client;
 
-import com.redhat.rhn.common.conf.Config;
 import com.redhat.rhn.common.conf.ConfigDefaults;
 import com.redhat.rhn.common.util.http.HttpClientAdapter;
 import com.redhat.rhn.manager.content.ProductTreeEntry;
@@ -189,7 +188,7 @@ public class SCCWebClient implements SCCClient {
                     throw new RuntimeException(e1);
                 }
             }, executor);
-        }).collect(Collectors.toList());
+        }).toList();
 
         CompletableFuture<Void> voidCompletableFuture = CompletableFuture.allOf(
                 futures.toArray(new CompletableFuture[0]));
@@ -199,7 +198,7 @@ public class SCCWebClient implements SCCClient {
                 futures.stream().map(CompletableFuture::join)
                 )
                 .flatMap(p -> p.result.stream())
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private void addHeaders(AbstractHttpMessage request) {
@@ -211,7 +210,7 @@ public class SCCWebClient implements SCCClient {
         request.addHeader("SMS", uuid != null ? uuid : "undefined");
 
         // overwrite the default
-        request.addHeader("User-Agent", Config.get().getString(ConfigDefaults.PRODUCT_NAME) + "/" +
+        request.addHeader("User-Agent", ConfigDefaults.get().getProductName() + "/" +
                 ConfigDefaults.get().getProductVersion());
         if (LOG.isDebugEnabled()) {
             Arrays.stream(request.getAllHeaders()).forEach(h -> LOG.debug(h.toString()));
